<resources>
    <string name="app_name">EcomTest</string>
    <string name="take_photo">Choose Photo</string>
    <string name="label_community_name">Community Name</string>
    <string name="label_geographical">Geographical District</string>
    <string name="label_accessibility">Accessibility</string>
    <string name="label_distance_ecom">Distance to Ecom</string>
    <string name="label_license_date">License Date</string>
    <string name="label_connected_ecg">Connected to ECG</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_latitude">Latitude</string>
    <string name="button_submit_form">Submit</string>
    <string name="location_button">Get Location</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_now">Enable Now</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="action_gallery">Choose from Gallery</string>
    <string name="action_camera">Take Photo</string>
    <string name="image_loaded">Image has been loaded</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>