<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/community_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:background="@drawable/background_text"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_tiny"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_add_24"
        app:drawableStartCompat="@drawable/ic_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:labelFor="@id/community_name"
        android:text="@string/label_community_name"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/community_photo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/community_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:focusableInTouchMode="true"
        android:background="@drawable/background_form"
        android:drawablePadding="5dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/geographical_district"
        android:text="@string/label_geographical"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/community_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/accessibility"
        android:text="@string/label_accessibility"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/community_name"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/geographical_district"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:drawablePadding="5dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="KeyboardInaccessibleWidget" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/accessibility"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:drawablePadding="5dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toEndOf="@+id/geographical_district"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/distance_ecom"
        android:text="@string/label_distance_ecom"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geographical_district" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/license_date"
        android:text="@string/label_license_date"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/accessibility" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/distance_ecom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:drawablePadding="5dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="KeyboardInaccessibleWidget" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/license_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:drawablePadding="5dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toEndOf="@+id/distance_ecom"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:labelFor="@+id/connected_ecg"
        android:text="@string/label_connected_ecg"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_ecom" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/connected_ecg"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/background_form"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:drawablePadding="5dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/distance_ecom"
        android:text="@string/label_longitude"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connected_ecg"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/license_date"
        android:text="@string/label_latitude"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/ts_very_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/connected_ecg" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/longitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:drawablePadding="5dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="KeyboardInaccessibleWidget,RtlCompat" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/latitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_form"
        android:drawablePadding="5dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/ts"
        app:layout_constraintStart_toEndOf="@+id/longitude"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="KeyboardInaccessibleWidget" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_selectable_button"
        android:text="@string/button_submit_form"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_big"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/background_selectable_button"
        android:text="@string/location_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_big"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/latitude"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>